@@ -14,12 +14,16 @@
  -  When moving item change icon to move instead of append
  -  When moving item it cannot moved in it self
  =  Label is not selected after alter
+ -  Scope var must also be set for Designer
+ -  BBar is converted to string instead of object
 
  Change History:
  Version 2.0.1-beta2: 
   * Added delete element as context menu
   * Added Undo and Redo functions
   * Added CodeTree
+  * Fixed copy to clipboard did not work
+  * Fixed redraw problems for containers
   * Fixed problems in editableJson code
   
  
